--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-black text-white flex flex-col items-center justify-center min-h-screen p-4">
-    <div class="w-full max-w-md">
+<body class="bg-black text-white flex flex-col min-h-screen p-2 sm:p-4">
+    <div class="w-full max-w-md mx-auto flex flex-col">
         <header class="text-left mb-8 w-full">
-            <h1 class="text-4xl sm:text-5xl font-semibold">Twitter Time Machine</h1>
+            <h1 class="text-3xl sm:text-4xl font-semibold">Twitter Time Machine</h1>
             <h2 id="subheading-date" class="text-xl sm:text-2xl text-gray-400 mt-2"></h2>
         </header>
 
@@ -27,6 +27,22 @@
             </button>
         </main>
     </div>
+
+    <footer class="w-full py-4 mt-12">
+        <div class="flex flex-col items-center text-center">
+            <div style="transform: scale(0.5); transform-origin: center; margin-bottom: -22px;" class="mb-0">
+                <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="chand" data-color="#000000" data-emoji=""  data-font="Lato" data-text="Buy me a coffee" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
+            </div>
+            <div class="relative group mt-3">
+                <span class="text-xs text-gray-400 border-b border-dashed border-gray-400 cursor-help">
+                    Seeing tweets from a day earlier?
+                </span>
+                <div class="absolute left-1/2 -translate-x-1/2 bottom-full mb-2 w-max max-w-xs p-2 text-xs text-white bg-gray-700 rounded-md shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none group-hover:pointer-events-auto z-20">
+                    It may happen for tweets around midnight, because Twitter search works with UTC timezone, not your local timezone.
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
